# wednesday-csgo

./: .editorconfig  CMakeLists.txt  wednesday.sln
hw-sdk/: hw-sdk.vcxproj
hw-sdk/globals/hooks/wndproc/: wndproc.h
hw-sdk/hacks/gui/: gui.cpp
wednesday-csgo/: dllmain.cpp  wednesday-csgo.vcxproj
wednesday-csgo/game/definitions/classes/: c_base_animating.cpp
wednesday-csgo/game/definitions/structs/: color.cpp
wednesday-csgo/game/sdk/classes/: c_base_animating.h  c_base_combat_weapon.h  c_base_player.h  c_cs_player.h  i_client_renderable.h  i_engine_trace.h  iv_engine_client.h  iv_model_info.h
wednesday-csgo/game/sdk/enums/: hitgroup.h
wednesday-csgo/game/sdk/structs/: color.h  studio.h
wednesday-csgo/globals/hooks/: hooking.cpp
wednesday-csgo/globals/hooks/anim_fix/: anim_fix.h
wednesday-csgo/globals/hooks/create_move/: create_move.cpp
wednesday-csgo/globals/hooks/draw_model_execute/: draw_model_execute.cpp
wednesday-csgo/globals/hooks/emit_sound/: emit_sound.cpp
wednesday-csgo/globals/hooks/end_scene/: end_scene.cpp
wednesday-csgo/globals/hooks/frame_stage_notify/: frame_stage_notify.cpp
wednesday-csgo/globals/hooks/paint_traverse/: paint_traverse.cpp
wednesday-csgo/globals/hooks/send_net_msg/: send_net_msg.h
wednesday-csgo/globals/includes/: includes.h
wednesday-csgo/globals/interfaces/: interfaces.cpp  interfaces.h
wednesday-csgo/globals/macros/: macros.h
wednesday-csgo/globals/wednesday/: wednesday.cpp  wednesday.h
wednesday-csgo/hacks/features/aimbot/: aimbot.cpp
wednesday-csgo/hacks/features/lagcomp/: lagcomp.cpp
wednesday-csgo/hacks/features/movement/: movement.cpp  movement.h
wednesday-csgo/hacks/features/visuals/: visuals.cpp  visuals.h
wednesday-csgo/hacks/gui/cfg/: cfg.cpp
wednesday-csgo/hacks/gui/window/: window.cpp
wednesday-csgo/hacks/logging/: logging.cpp
wednesday-csgo/hacks/menu/: menu.cpp
wednesday-csgo/hacks/menu/config/: config.cpp  config.h
wednesday-csgo/hacks/menu/window/: window.cpp  window.h
wednesday-csgo/hacks/menu/window/tab/: tab.cpp
wednesday-csgo/hacks/menu/window/tab/group/: group.cpp  group.h
wednesday-csgo/hacks/menu/window/tab/group/objects/: base_object.h  checkbox.cpp  checkbox.h  slider_int.cpp  slider_int.h
wednesday-csgo/utils/console/: console.cpp
wednesday-csgo/utils/entity_list/: entity_list.cpp  entity_list.h
wednesday-csgo/utils/helpers/function_enforce/: function_enforce.h
wednesday-csgo/utils/keybinds/: keybinds.h
wednesday-csgo/utils/math/types/: vector.h
wednesday-csgo/utils/particle_system/: particle_system.cpp
wednesday-csgo/utils/renderer/: renderer.cpp  renderer.h
