cmake_minimum_required(VERSION 3.21)
project(hotwheels)

set(CMAKE_CXX_STANDARD 14)

include_directories(wednesday-csgo/dependencies/audio)
include_directories(wednesday-csgo/dependencies/audio/kyu)
include_directories(wednesday-csgo/dependencies/audio/peter_griffin)
include_directories(wednesday-csgo/dependencies/audio/soilder)
include_directories(wednesday-csgo/dependencies/checksum)
include_directories(wednesday-csgo/dependencies/formatting)
include_directories(wednesday-csgo/dependencies/formatting/fmt)
include_directories(wednesday-csgo/dependencies/hash)
include_directories(wednesday-csgo/dependencies/lazy_importer)
include_directories(wednesday-csgo/dependencies/minhook/include)
include_directories(wednesday-csgo/dependencies/minhook/src)
include_directories(wednesday-csgo/dependencies/minhook/src/hde)
include_directories(wednesday-csgo/dependencies/mocking_bird)
include_directories(wednesday-csgo/dependencies/xor)
include_directories(wednesday-csgo/game/datatypes)
include_directories(wednesday-csgo/game/sdk)
include_directories(wednesday-csgo/game/sdk/classes)
include_directories(wednesday-csgo/game/sdk/enums)
include_directories(wednesday-csgo/game/sdk/structs)
include_directories(wednesday-csgo/globals)
include_directories(wednesday-csgo/globals/ctx)
include_directories(wednesday-csgo/globals/hooks)
include_directories(wednesday-csgo/globals/hooks/anim_fix)
include_directories(wednesday-csgo/globals/hooks/cl_move)
include_directories(wednesday-csgo/globals/hooks/create_move)
include_directories(wednesday-csgo/globals/hooks/draw_model_execute)
include_directories(wednesday-csgo/globals/hooks/emit_sound)
include_directories(wednesday-csgo/globals/hooks/end_scene)
include_directories(wednesday-csgo/globals/hooks/frame_stage_notify)
include_directories(wednesday-csgo/globals/hooks/glow_effect_spectator)
include_directories(wednesday-csgo/globals/hooks/item_post_frame)
include_directories(wednesday-csgo/globals/hooks/paint_traverse)
include_directories(wednesday-csgo/globals/hooks/wndproc)
include_directories(wednesday-csgo/globals/hotwheels)
include_directories(wednesday-csgo/globals/includes)
include_directories(wednesday-csgo/globals/interfaces)
include_directories(wednesday-csgo/globals/macros)
include_directories(wednesday-csgo/hacks/features/aimbot)
include_directories(wednesday-csgo/hacks/features/lagcomp)
include_directories(wednesday-csgo/hacks/features/movement)
include_directories(wednesday-csgo/hacks/features/visuals)
include_directories(wednesday-csgo/hacks/gui)
include_directories(wednesday-csgo/hacks/gui/anims)
include_directories(wednesday-csgo/hacks/gui/cfg)
include_directories(wednesday-csgo/hacks/gui/groupbox)
include_directories(wednesday-csgo/hacks/gui/gui_ctx)
include_directories(wednesday-csgo/hacks/gui/includes)
include_directories(wednesday-csgo/hacks/gui/utils)
include_directories(wednesday-csgo/hacks/gui/window)
include_directories(wednesday-csgo/hacks/logging)
include_directories(wednesday-csgo/hacks/prediction)
include_directories(wednesday-csgo/utils)
include_directories(wednesday-csgo/utils/console)
include_directories(wednesday-csgo/utils/console/log_level)
include_directories(wednesday-csgo/utils/convars)
include_directories(wednesday-csgo/utils/entity_list)
include_directories(wednesday-csgo/utils/helpers)
include_directories(wednesday-csgo/utils/helpers/function_enforce)
include_directories(wednesday-csgo/utils/helpers/primitive_definitions)
include_directories(wednesday-csgo/utils/keybinds)
include_directories(wednesday-csgo/utils/math)
include_directories(wednesday-csgo/utils/math/types)
include_directories(wednesday-csgo/utils/modules)
include_directories(wednesday-csgo/utils/modules/address)
include_directories(wednesday-csgo/utils/netvar)
include_directories(wednesday-csgo/utils/particle_system)
include_directories(wednesday-csgo/utils/renderer)
include_directories(wednesday-csgo/utils/vfunc)

add_executable(hotwheels
        wednesday-csgo/dependencies/audio/kyu/loaded.h
        wednesday-csgo/dependencies/audio/peter_griffin/loaded.h
        wednesday-csgo/dependencies/audio/soilder/loaded.h
        wednesday-csgo/dependencies/checksum/checksum.cpp
        wednesday-csgo/dependencies/checksum/checksum.hpp
        wednesday-csgo/dependencies/formatting/fmt/chrono.h
        wednesday-csgo/dependencies/formatting/fmt/color.h
        wednesday-csgo/dependencies/formatting/fmt/compile.h
        wednesday-csgo/dependencies/formatting/fmt/core.h
        wednesday-csgo/dependencies/formatting/fmt/format-inl.h
        wednesday-csgo/dependencies/formatting/fmt/format.h
        wednesday-csgo/dependencies/formatting/fmt/locale.h
        wednesday-csgo/dependencies/formatting/fmt/os.h
        wednesday-csgo/dependencies/formatting/fmt/ostream.h
        wednesday-csgo/dependencies/formatting/fmt/posix.h
        wednesday-csgo/dependencies/formatting/fmt/printf.h
        wednesday-csgo/dependencies/formatting/fmt/ranges.h
        wednesday-csgo/dependencies/formatting/tinyformat.h
        wednesday-csgo/dependencies/hash/hash.h
        wednesday-csgo/dependencies/lazy_importer/lazy_importer.h
        wednesday-csgo/dependencies/minhook/include/MinHook.h
        wednesday-csgo/dependencies/minhook/src/hde/hde32.c
        wednesday-csgo/dependencies/minhook/src/hde/hde32.h
        wednesday-csgo/dependencies/minhook/src/hde/hde64.c
        wednesday-csgo/dependencies/minhook/src/hde/hde64.h
        wednesday-csgo/dependencies/minhook/src/hde/pstdint.h
        wednesday-csgo/dependencies/minhook/src/hde/table32.h
        wednesday-csgo/dependencies/minhook/src/hde/table64.h
        wednesday-csgo/dependencies/minhook/src/buffer.c
        wednesday-csgo/dependencies/minhook/src/buffer.h
        wednesday-csgo/dependencies/minhook/src/hook.c
        wednesday-csgo/dependencies/minhook/src/trampoline.c
        wednesday-csgo/dependencies/minhook/src/trampoline.h
        wednesday-csgo/dependencies/mocking_bird/mocking_bird.h
        wednesday-csgo/dependencies/xor/xor.h
        wednesday-csgo/game/datatypes/cutl.h
        wednesday-csgo/game/datatypes/keyvalues.h
        wednesday-csgo/game/sdk/classes/c_base_animating.h
        wednesday-csgo/game/sdk/classes/c_base_combat_character.h
        wednesday-csgo/game/sdk/classes/c_base_combat_weapon.h
        wednesday-csgo/game/sdk/classes/c_base_entity.h
        wednesday-csgo/game/sdk/classes/c_base_player.h
        wednesday-csgo/game/sdk/classes/c_client_state.h
        wednesday-csgo/game/sdk/classes/c_cs_player.cpp
        wednesday-csgo/game/sdk/classes/c_cs_player.h
        wednesday-csgo/game/sdk/classes/c_effect.h
        wednesday-csgo/game/sdk/classes/c_handle.h
        wednesday-csgo/game/sdk/classes/c_hud_chat.h
        wednesday-csgo/game/sdk/classes/c_input.h
        wednesday-csgo/game/sdk/classes/c_studio_render.h
        wednesday-csgo/game/sdk/classes/c_usercmd.h
        wednesday-csgo/game/sdk/classes/c_verified_cmd.h
        wednesday-csgo/game/sdk/classes/c_view_setup.h
        wednesday-csgo/game/sdk/classes/i_app_system.h
        wednesday-csgo/game/sdk/classes/i_client_dll.h
        wednesday-csgo/game/sdk/classes/i_client_entity.h
        wednesday-csgo/game/sdk/classes/i_client_entity_list.h
        wednesday-csgo/game/sdk/classes/i_client_networkable.h
        wednesday-csgo/game/sdk/classes/i_client_renderable.h
        wednesday-csgo/game/sdk/classes/i_client_thinkable.h
        wednesday-csgo/game/sdk/classes/i_client_unknown.h
        wednesday-csgo/game/sdk/classes/i_collideable.h
        wednesday-csgo/game/sdk/classes/i_cvar.h
        wednesday-csgo/game/sdk/classes/i_debug_overlay.h
        wednesday-csgo/game/sdk/classes/i_engine_sound.h
        wednesday-csgo/game/sdk/classes/i_engine_trace.h
        wednesday-csgo/game/sdk/classes/i_global_vars.h
        wednesday-csgo/game/sdk/classes/i_handle_entity.h
        wednesday-csgo/game/sdk/classes/i_localize.h
        wednesday-csgo/game/sdk/classes/i_mat_render_ctx.h
        wednesday-csgo/game/sdk/classes/i_material_system.h
        wednesday-csgo/game/sdk/classes/i_net_channel_info.h
        wednesday-csgo/game/sdk/classes/i_panel.h
        wednesday-csgo/game/sdk/classes/i_prediction.h
        wednesday-csgo/game/sdk/classes/iv_engine_client.h
        wednesday-csgo/game/sdk/classes/iv_model_render.h
        wednesday-csgo/game/sdk/enums/buttons.h
        wednesday-csgo/game/sdk/enums/class_ids.h
        wednesday-csgo/game/sdk/enums/cvar_ids.h
        wednesday-csgo/game/sdk/enums/data_update_type.h
        wednesday-csgo/game/sdk/enums/def_idx.h
        wednesday-csgo/game/sdk/enums/field_type.h
        wednesday-csgo/game/sdk/enums/flow.h
        wednesday-csgo/game/sdk/enums/frame_stage.h
        wednesday-csgo/game/sdk/enums/glow_style.h
        wednesday-csgo/game/sdk/enums/key_type.h
        wednesday-csgo/game/sdk/enums/material_var_flags.h
        wednesday-csgo/game/sdk/enums/move_type.h
        wednesday-csgo/game/sdk/enums/net_channel_type.h
        wednesday-csgo/game/sdk/enums/player_flags.h
        wednesday-csgo/game/sdk/enums/prop_type.h
        wednesday-csgo/game/sdk/enums/td_offset.h
        wednesday-csgo/game/sdk/enums/teams.h
        wednesday-csgo/game/sdk/enums/trace_type.h
        wednesday-csgo/game/sdk/enums/weapon_type.h
        wednesday-csgo/game/sdk/structs/cnetmsg_signonstate_t.h
        wednesday-csgo/game/sdk/structs/color.h
        wednesday-csgo/game/sdk/structs/data_map.h
        wednesday-csgo/game/sdk/structs/demo_playback_parameters_t.h
        wednesday-csgo/game/sdk/structs/dt_common.h
        wednesday-csgo/game/sdk/structs/dt_recv.h
        wednesday-csgo/game/sdk/structs/i_client_class.h
        wednesday-csgo/game/sdk/structs/i_material.h
        wednesday-csgo/game/sdk/structs/i_texture.h
        wednesday-csgo/game/sdk/structs/model_render_info.h
        wednesday-csgo/game/sdk/structs/player_info_t.h
        wednesday-csgo/game/sdk/structs/studio.h
        wednesday-csgo/game/sdk/structs/type_description.h
        wednesday-csgo/game/sdk/structs/weapon_data_t.h
        wednesday-csgo/game/sdk/include.h
        wednesday-csgo/globals/ctx/ctx.cpp
        wednesday-csgo/globals/ctx/ctx.h
        wednesday-csgo/globals/hooks/anim_fix/anim_fix.cpp
        wednesday-csgo/globals/hooks/anim_fix/anim_fix.h
        wednesday-csgo/globals/hooks/cl_move/cl_move.cpp
        wednesday-csgo/globals/hooks/cl_move/cl_move.h
        wednesday-csgo/globals/hooks/create_move/create_move.cpp
        wednesday-csgo/globals/hooks/create_move/create_move.h
        wednesday-csgo/globals/hooks/draw_model_execute/draw_model_execute.cpp
        wednesday-csgo/globals/hooks/draw_model_execute/draw_model_execute.h
        wednesday-csgo/globals/hooks/emit_sound/emit_sound.cpp
        wednesday-csgo/globals/hooks/emit_sound/emit_sound.h
        wednesday-csgo/globals/hooks/end_scene/end_scene.cpp
        wednesday-csgo/globals/hooks/end_scene/end_scene.h
        wednesday-csgo/globals/hooks/frame_stage_notify/frame_stage_notify.cpp
        wednesday-csgo/globals/hooks/frame_stage_notify/frame_stage_notify.h
        wednesday-csgo/globals/hooks/glow_effect_spectator/glow_effect_spectator.cpp
        wednesday-csgo/globals/hooks/glow_effect_spectator/glow_effect_spectator.h
        wednesday-csgo/globals/hooks/item_post_frame/item_post_frame.cpp
        wednesday-csgo/globals/hooks/item_post_frame/item_post_frame.h
        wednesday-csgo/globals/hooks/paint_traverse/paint_traverse.cpp
        wednesday-csgo/globals/hooks/paint_traverse/paint_traverse.h
        wednesday-csgo/globals/hooks/wndproc/wndproc.cpp
        wednesday-csgo/globals/hooks/wndproc/wndproc.h
        wednesday-csgo/globals/hooks/hooking.cpp
        wednesday-csgo/globals/hooks/hooking.h
        wednesday-csgo/globals/hotwheels/hotwheels.cpp
        wednesday-csgo/globals/hotwheels/hotwheels.h
        wednesday-csgo/globals/includes/includes.h
        wednesday-csgo/globals/interfaces/interfaces.cpp
        wednesday-csgo/globals/interfaces/interfaces.h
        wednesday-csgo/globals/macros/macros.h
        wednesday-csgo/globals/csgo.cpp
        wednesday-csgo/globals/csgo.h
        wednesday-csgo/hacks/features/aimbot/aimbot.cpp
        wednesday-csgo/hacks/features/aimbot/aimbot.h
        wednesday-csgo/hacks/features/lagcomp/lagcomp.cpp
        wednesday-csgo/hacks/features/lagcomp/lagcomp.h
        wednesday-csgo/hacks/features/movement/movement.cpp
        wednesday-csgo/hacks/features/movement/movement.h
        wednesday-csgo/hacks/features/visuals/visuals.cpp
        wednesday-csgo/hacks/features/visuals/visuals.h
        wednesday-csgo/hacks/gui/anims/anims.h
        wednesday-csgo/hacks/gui/anims/effects.h
        wednesday-csgo/hacks/gui/cfg/cfg.cpp
        wednesday-csgo/hacks/gui/cfg/cfg.h
        wednesday-csgo/hacks/gui/cfg/cfg.inl
        wednesday-csgo/hacks/gui/groupbox/groupbox.cpp
        wednesday-csgo/hacks/gui/groupbox/groupbox.h
        wednesday-csgo/hacks/gui/gui_ctx/gui_ctx.cpp
        wednesday-csgo/hacks/gui/gui_ctx/gui_ctx.h
        wednesday-csgo/hacks/gui/includes/includes.h
        wednesday-csgo/hacks/gui/utils/ui_utils.cpp
        wednesday-csgo/hacks/gui/utils/ui_utils.h
        wednesday-csgo/hacks/gui/window/window.cpp
        wednesday-csgo/hacks/gui/window/window.h
        wednesday-csgo/hacks/gui/gui.cpp
        wednesday-csgo/hacks/gui/gui.h
        wednesday-csgo/hacks/logging/logging.cpp
        wednesday-csgo/hacks/logging/logging.h
        wednesday-csgo/hacks/prediction/prediction.cpp
        wednesday-csgo/hacks/prediction/prediction.h
        wednesday-csgo/utils/console/log_level/log_level.h
        wednesday-csgo/utils/console/console.cpp
        wednesday-csgo/utils/console/console.h
        wednesday-csgo/utils/console/console.inl
        wednesday-csgo/utils/convars/convars.h
        wednesday-csgo/utils/entity_list/entity_list.cpp
        wednesday-csgo/utils/entity_list/entity_list.h
        wednesday-csgo/utils/helpers/function_enforce/function_enforce.h
        wednesday-csgo/utils/helpers/primitive_definitions/primitives.h
        wednesday-csgo/utils/helpers/bit_flag.h
        wednesday-csgo/utils/keybinds/keybinds.cpp
        wednesday-csgo/utils/keybinds/keybinds.h
        wednesday-csgo/utils/math/types/matrix.h
        wednesday-csgo/utils/math/types/quaternion.h
        wednesday-csgo/utils/math/types/vector.h
        wednesday-csgo/utils/math/math.cpp
        wednesday-csgo/utils/math/math.h
        wednesday-csgo/utils/math/math.inl
        wednesday-csgo/utils/modules/address/address.h
        wednesday-csgo/utils/modules/modules.cpp
        wednesday-csgo/utils/modules/modules.h
        wednesday-csgo/utils/modules/modules.inl
        wednesday-csgo/utils/netvar/netvar.cpp
        wednesday-csgo/utils/netvar/netvar.h
        wednesday-csgo/utils/particle_system/particle_system.cpp
        wednesday-csgo/utils/particle_system/particle_system.h
        wednesday-csgo/utils/renderer/renderer.cpp
        wednesday-csgo/utils/renderer/renderer.h
        wednesday-csgo/utils/renderer/renderer.inl
        wednesday-csgo/utils/vfunc/vfunc.h
        wednesday-csgo/utils/utils.cpp
        wednesday-csgo/utils/utils.h
        wednesday-csgo/dllmain.cpp)
